Making <ul> bullets visible in articles. Fixes #5008757561927

--- a/oc_platform/assets/sass/article/_content.sass
+++ b/oc_platform/assets/sass/article/_content.sass
@@ -58,6 +58,12 @@ article
 		&.show-zoom, &:hover
 			opacity: 0.8
 
+	section#article
+		ul
+			margin-top: 10px
+			list-style-type: disc
+			padding-left: 16px
+
 .image-theater
 	background: none repeat scroll 0 0 #FFFFFF
 	border: 1px solid #000
